# cpp-socket-communication

./: .gitignore  CMakeLists.txt  README.md
c++ socket/: CMakeLists.txt
c++ socket/head/: thread_pool.h
c++ socket/src/: client.cpp  serverMain.cpp
c++_socket/head/: socket.h
c++_socket/src/: clientMain.cpp  server.cpp  socket.cpp  thread_pool.cpp
